add slider to desktop and update language

--- a/house.html
+++ b/house.html
@@ -92,9 +92,9 @@
       <div class="container" data-aos="fade-up">
         <div class="row justify-content-center">
           <div class="col-lg-10">
-            <p class="special"><strong>Problem: How can we simplify hosts’ property rules to decrease loss of revenue
+            <p class="special"><strong>Problem: How can we simplify property rules to decrease loss of revenue
                 due to cancellations.</strong><br />
-              Working closely with a UX Manager and dedicated Content Strategist, I helped to redesign the host
+              Working closely with a UX Manager, Product Manager, and dedicated Content Strategist, I helped to redesign the host
               experience for vacation rental property rules.
             </p>
           </div>
@@ -111,7 +111,9 @@
         <div class="spacer"></div>
         <div class="row">
           <div class="col-lg-10 offset-lg-1">
-            <p>The original design for our hosts’ rules allowed for great flexibility. While this offered convenience
+            <p>
+              House rules are the property rules a host is able to set for their guests. These rules encompasses items like max
+              occupancy, minimum renting age, allowance of pets, and several other rules. The original design for these rules allowed for great flexibility. While this offered convenience
               for hosts, this caused issues for travelers.
               Often times, hosts would have nuanced and conflicting rules in a free-text format. This resulted in
               unnecessary confusion for travelers and led to a
@@ -120,7 +122,7 @@
         </div>
         <div class="row align-items-center">
           <div class="col-lg-10 offset-lg-1">
-            <p>The design of the house rules page only exacerbated the issues between hosts and travelers. During a UX
+            <p>The design of the house rules page exacerbated the issues between hosts and travelers. During a UX
               metric review, the research team uncovered 3 UX blockers and 38 frictions. The specific blockers involved
               saving rules, modifying rules, and removing
               custom rules.</p>
@@ -133,9 +135,10 @@
             </div>
             <div class="spacer"></div>
             <div class="spacer"></div>
-            <p>After discovering the issues and gaps, we began to iterate from the original designs, also referencing
-              our competitors’ experiences along the way.
-              We had regular Scrum of Scrums meetings and solicited feedback from other designers on our team. Through
+            <p>After discovering the issues and gaps, we began to iterate from the original designs. We
+              referenced our competitors’ experiences and made updates that prompted hosts to use more
+              structured content when listing their rules. We had regular Scrum of Scrums meetings and
+              solicited feedback from other designers on our team. Through
               these efforts, we arrived at a design ready to test.</p>
             <p>Some of the most important proposed updates to the experience included:
             <ul>
@@ -192,7 +195,7 @@
         </div>
         <div class="spacer"></div>
         <div class="spacer"></div>
-        <div class="row align-items-center">
+        <div class="row justify-content-center">
           <div class="col-lg-10 offset-lg-1">
             <p>Overall, other teams have spoken highly of the improvements to house rules, but we are still waiting on
               more concrete metrics to prove that our updates have helped
@@ -200,24 +203,28 @@
               to be developed to truly gauge the impact the updates have had.
               One item that will be developed soon is a feedback outlet via the house rules page that will allow hosts
               to provide their opinions on the specific experience.</p>
-            <!-- <div class="spacer"></div> -->
-            <!-- <p class="text-center">
-              <div id="cocoenHideMobile" class="cocoen">
-                <img src="images/projects/house/house-4.0.jpg" alt="Original house rules design">
-                <div class="spacer"></div>
-                <div class="spacer"></div>
-                <img src="images/projects/house/house-4.1.jpg" alt="Most recent design updates for house rules">
-              </div>
-            </p> -->
+              <div class="spacer"></div>
+              <div class="spacer"></div>
+              <p class="text-center">
+                <div id="cocoenHideMobile" class="cocoen desktop-only">
+                    <img width="100%" src="images/projects/house/house-4.0.jpg" alt="Original house rules design">
+                    <div class="spacer"></div>
+                    <div class="spacer"></div>
+                    <img width="100%" src="images/projects/house/house-4.1.jpg" alt="Most recent design updates for house rules">
+                </div>
+            </p>
           </div>
         </div>
         <div class="spacer"></div>
-        <div class="col-lg-10 offset-lg-1">
+        <div class="col-lg-10 offset-lg-1 mobile-only">
           <img src="images/projects/house/house-4.1.jpg" alt="Most recent design updates for house rules"
             class="img-fluid secondary-hero-image">
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mobile-only">
           <p class="image-caption text-center">(Most up-to-date designs of the house rules page.)</p>
+        </div>
+        <div class="row justify-content-center desktop-only">
+          <p class="image-caption text-center">(Slide between the original house rules design and the updated design.)</p>
         </div>
         <div class="spacer"></div>
         <div class="spacer"></div>
