--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
 
             <nav class="templateux-menu js-templateux-menu" role="navigation">
               <ul>
-                <li><a id="portfolioNav" href="#portfolioSection">Portfolio</a></li>
-                <li><a id="contactNav" href="#contactSection">Contact</a></li>
-                <li><a id="resumeNav" target="_blank" href="https://docs.google.com/document/d/15PjJdcsv_VlETdsOXHVBKPmZ6eb9s4rx74S8aS64bFc/edit?usp=sharing">R&eacute;sum&eacute;</a></li>
+                <!-- <li><a id="portfolioNav" href="#portfolioSection">Portfolio</a></li> -->
+                <!-- <li>
+                  <a id="contactNav" href="#contactSection">Contact me</a>
+              </li> -->
+                <li><a id="resumeNav" target="_blank" href="https://docs.google.com/document/d/15PjJdcsv_VlETdsOXHVBKPmZ6eb9s4rx74S8aS64bFc/edit?usp=sharing">Resume</a></li>
               </ul>
             </nav>
           </div>
@@ -74,12 +76,15 @@
       </div>
     </header>
 
+
     <!-- Splash -->
     <section id="top" class="hero">
       <div class="container">
         <div class="row align-items-center justify-content-center intro">
           <div class="col-md-10" data-aos="fade-up">
             <h1>Hello, my name is Jannon &amp; I'm a UX designer currently living in Austin, TX.</h1>
+            <p class="email-text">If you are interested in viewing my work, feel free to <a href="mailto: jannonjeffries@gmail.com">send me an email</a>.
+            </p>
           </div>
         </div>
       </div>
@@ -87,12 +92,12 @@
     <!-- End Splash-->
 
     <!-- Portfolio -->
-    <section id="portfolioSection" class="templateux-portfolio-overlap home-portfolio" id="next">
+    <!-- <section id="portfolioSection" class="templateux-portfolio-overlap home-portfolio" id="next">
       <div class="container-fluid">
 
-        <div class="row">
+        <div class="row"> -->
           <!-- House rules Start -->
-          <div class="col-lg-6" data-aos="fade-up">
+          <!-- <div class="col-lg-6" data-aos="fade-up">
             <a class="project animsition-link" href="house.html">
               <figure>
                 <img src="images/projects/house/house_thumb.jpg" alt="House rules project" class="img-fluid">
@@ -104,10 +109,10 @@
                 </div>
               </div>
             </a>
-          </div>
+          </div> -->
           <!-- House rules End -->
           <!-- Packages Start -->
-          <div class="col-lg-6" data-aos="fade-up">
+          <!-- <div class="col-lg-6" data-aos="fade-up">
             <a class="project animsition-link" href="packages.html">
               <figure>
                 <img src="images/projects/packages/packages-thumb.jpg" alt="Football Fan Experience Packages" class="img-fluid">
@@ -119,12 +124,12 @@
                 </div>
               </div>
             </a>
-          </div>
+          </div> -->
           <!-- Packages End -->
-        </div>
-        <div class="row">
+        <!-- </div>
+        <div class="row"> -->
             <!-- Experience Start -->
-            <div class="col-lg-6" data-aos="fade-up">
+            <!-- <div class="col-lg-6" data-aos="fade-up">
               <a class="project animsition-link" href="experience.html">
                 <figure>
                   <img src="images/projects/experience/experience_thumb.jpg" alt="Vivid Seats Experience Page" class="img-fluid">
@@ -136,10 +141,10 @@
                   </div>
                 </div>
               </a>
-            </div>
+            </div> -->
             <!-- Experience End -->
             <!-- Innovation Start -->
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <a class="project animsition-link" href="innovation.html">
                 <figure>
                   <img src="images/projects/innovation/innovation_thumb.jpg" alt="Innovation Day Project" class="img-fluid">
@@ -151,12 +156,12 @@
                   </div>
                 </div>
               </a>
-            </div>
+            </div> -->
             <!-- Innovation End -->
-          </div>
-        <div class="row">
+          <!-- </div>
+        <div class="row"> -->
           <!-- March Start -->
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <a class="project animsition-link" href="march.html">
                 <figure>
                   <img src="images/projects/march/mm_thumb.png" alt="March Madness Page Redesign" class="img-fluid">
@@ -168,10 +173,10 @@
                   </div>
                 </div>
               </a>
-            </div>
+            </div> -->
             <!-- March End -->
               <!-- Splitwise Start -->
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <a class="project animsition-link" href="split.html">
               <figure>
                 <img src="images/projects/splitwise/split-thumb.jpg" alt="Splitwise App POC Redesign" class="img-fluid">
@@ -183,7 +188,7 @@
                 </div>
               </div>
             </a>
-          </div>
+          </div> -->
           <!-- Splitwise End -->
           <!-- Capital Start  -->
           <!-- <div class="col-lg-6" data-aos="fade-up">
@@ -200,10 +205,10 @@
             </a>
           </div> -->
           <!-- Capital End -->
-        </div>
-        <div class="row">
+        <!-- </div>
+        <div class="row"> -->
           <!-- Cupcake Start -->
-          <div class="col-lg-6" data-aos="fade-up">
+          <!-- <div class="col-lg-6" data-aos="fade-up">
               <a class="project animsition-link" href="cupcake.html">
                 <figure>
                   <img src="images/projects/cupcake/cupcake_thumb.gif" alt="Cupcake Creator Project" class="img-fluid">
@@ -215,10 +220,10 @@
                   </div>
                 </div>
               </a>
-            </div>
+            </div> -->
             <!-- Cupcake End -->
           <!-- Mapbox Start -->
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <a class="project animsition-link" href="mapbox.html">
                 <figure>
                   <img src="images/projects/mapbox/mapbox_thumb.jpg" alt="Mapbox MLB Map" class="img-fluid">
@@ -230,12 +235,12 @@
                   </div>
                 </div>
               </a>
-            </div>
+            </div> -->
             <!-- Mapbox End -->
-          </div>
-          <div class="row">
+          <!-- </div>
+          <div class="row"> -->
             <!-- Trans Start -->
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
               <a class="project animsition-link" href="trans.html">
                 <figure>
                   <img src="images/projects/trans/trans_thumb.jpg" alt="Transactional Email Redesign" class="img-fluid">
@@ -247,7 +252,7 @@
                   </div>
                 </div>
               </a>
-            </div>
+            </div> -->
             <!-- Trans End -->
             <!-- Native Intro Start -->
             <!-- <div class="col-lg-6 native-tour" data-aos="fade-up" data-aos-delay="100">
@@ -265,7 +270,7 @@
               </div> -->
               <!-- Native Intro End -->
             <!-- Super Start -->
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <!-- <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                 <a class="project animsition-link" href="super.html">
                   <figure>
                     <img src="images/projects/super/sb_thumb.png" alt="Super Bowl Ticket Prices Landing Page" class="img-fluid">
@@ -277,9 +282,9 @@
                     </div>
                   </div>
                 </a>
-              </div>
+              </div> -->
               <!-- Super End -->
-          </div>
+          <!-- </div> -->
           <!-- <div class="row"> -->
             <!-- Gift Start -->
           <!-- <div class="col-lg-6" data-aos="fade-up">
@@ -350,7 +355,7 @@
     <!-- End Portfolio-->
 
     <!-- Contact -->
-    <div id="contactSection" class="contact-section templateux-section templateux-cta mt-5" data-aos="fade-up">
+    <!-- <div id="contactSection" class="contact-section templateux-section templateux-cta mt-5" data-aos="fade-up">
       <div class="container-fluid">
         <div class="cta-inner">
           <h2><span class="words-1">Email Me</span>
@@ -360,20 +365,20 @@
           </div>
         </div>  
       </div>
-    </div>
+    </div> -->
     <!-- End Contact -->
 
-    <footer class="templateux-footer">
+    <!-- <footer class="templateux-footer">
       <div class="container-fluid">
         <div class="row flex-footer">
           <div class="col-md-6 text-md-left text-center">
             <p>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy;
+               Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              <!-- Copyright &copy;
               <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
-              with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+              with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            </p>
+            <!-- </p>
           </div>
           <div class="col-md-6 text-md-right text-center footer-social">
             <span class="contact-icon">
@@ -407,7 +412,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
   </div>
 
