--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="http://www.jannonjeffries.com">
   <meta property="og:description" content="View the design work of Jannon Jeffries">
-  <!-- <meta property="og:image" content="TBD"> -->
+  <meta property="og:image" content="images/OG.png">
 
 
   <!-- Favicon -->
-  <!-- <link rel="icon" href="/favicon.ico">
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">  
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png"> -->
+  <link rel="icon" href="images/fav/favicon.ico">
+  <link rel="icon" href="images/logo_rose-gold.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
 
   <!-- Fonts -->
@@ -97,11 +97,6 @@
         <h3>Overview</h3>
         <p>Homeowners set property rules travelers must agree to prior to booking. These rules encompass items like max
           occupancy, minimum renter age, allowance of pets, and several other rules.</p>
-        <!-- <div class="large-image-container">
-          <img class="project-image-large border-radius"
-            src="images/projects/house-rules/overview.png"
-            alt="A feedback module for the house rules page">
-        </div> -->
         <hr>
         <h3>Problem</h3>
         <p>Hosts cancel on travelers due to confusion surrounding house rules. Vrbo has over 13,000 cancellations
@@ -113,8 +108,7 @@
           were included in the house
           rules. (The outlined sections pictured above are areas for custom content.)</p>
         <div class="large-image-container">
-          <img class="project-image-large"
-            src="images/projects/house-rules/original.png"
+          <img class="project-image-large" src="images/projects/house-rules/original.png"
             alt="Original house rules experience">
         </div>
         <hr>
@@ -161,8 +155,7 @@
           Lastly, I regularly shared my working designs at our host team design critique for transparency and feedback.
         </p>
         <div class="large-image-container">
-          <img class="project-image-large"
-            src="images/projects/house-rules/process.png"
+          <img class="project-image-large" src="images/projects/house-rules/process.png"
             alt="Early iterations of the pets rule">
         </div>
         <div class="note center">
@@ -177,8 +170,7 @@
           <li>If each rule provided enough options for hosts</li>
         </ul>
         <div class="large-image-container">
-          <img class="project-image-large video-border"
-            src="images/projects/house-rules/prototype.gif"
+          <img class="project-image-large video-border" src="images/projects/house-rules/prototype.gif"
             alt="A prototype demonstrating the rule allowing pets">
         </div>
         <div class="note center">
@@ -197,31 +189,31 @@
         <h3>New designs</h3>
         <p>After updating some of the content and syncing with the Engineering team about scope, we were able to push
           forward with an updated version of house rules.</p>
-        <h4>A look at the new host view on desktop and mobile and what that content looks like for the traveler</h4>
+        <h4>A look at the new design</h4>
+        <p>The new host design utilizes components from the Vrbo design system, allowing hosts to always have the save
+          action within view. The content in the host view is also clearly represented in the traveler view as the host
+          intended.</p>
         <div class="large-image-container">
-          <img class="project-image-large"
-            src="images/projects/house-rules/new.png"
+          <img class="project-image-large" src="images/projects/house-rules/new.png"
             alt="The new house rules experience displayed on different screen sizes">
         </div>
         <h4>A comparison between an old rule and a new rule</h4>
         <p>The original rule included an "on/off" state as well as options for "yes" and "no". The new rule has only the
           "yes" and "no" options with other more specific inputs inspired by early user research.</p>
         <div class="large-image-container">
-          <img class="project-image-large"
-            src="images/projects/house-rules/compare.png"
+          <img class="project-image-large" src="images/projects/house-rules/compare.png"
             alt="Showing the difference between the original pets rule and the new pets rule">
         </div>
         <h4>Rule states</h4>
-        <p>In order to provide the Engineers with clarity, each rule was broken down into its different states.</p>
+        <p>In order to provide the Engineers with clarity, each rule has been broken down into its different states.
+          Using progressive disclosure, we only surface relevant content when the appropriate rule choice is selected.
+        </p>
         <div class="large-image-container">
-          <img class="project-image-large"
-            src="images/projects/house-rules/states.png"
+          <img class="project-image-large" src="images/projects/house-rules/states.png"
             alt="Showing the different states of the new pets rule">
         </div>
-      </div>
       <hr>
       <h3>Objectives follow-up</h3>
-      <p></p>
       <ul>
         <li>No amount of new structured rules will be sufficient to replace custom content for hosts with unique
           properties.</li>
@@ -232,8 +224,7 @@
       <hr>
       <h3>Next steps</h3>
       <p>To improve the house rules experience even further, we plan to add more rules after implementing additional
-        natural
-        language processing for host custom rules and notes.</p>
+        natural language processing for host custom rules and notes.</p>
       <br><br>
       <div class="button-container">
         <button class="button-secondary back-to-projects">Back to projects</button>
@@ -248,6 +239,7 @@
   <div id="cancelChangeOpened" class="hide">
     <div class="lightbox_content">
       <p class="material-icons close">close</p>
+      <div class="project-lightbox-content">
       <h2>Cancel and change</h2>
       <h3>Overview</h3>
       <p>Hosts are able to change or cancel a guest's reservation if the need arises.</p>
@@ -263,8 +255,7 @@
       <p>The original cancel experience has led to a lack of trust between travelers and hosts. In this experience,
         hosts are not required to explain to the guest why they are canceling.</p>
       <div class="large-image-container">
-        <img class="project-image-large image-border"
-          src="images/projects/cancel-change/cancel/original.png"
+        <img class="project-image-large image-border" src="images/projects/cancel-change/cancel/original.png"
           alt="Original cancellation screen">
       </div>
       <h4>Changing a reservation</h4>
@@ -272,8 +263,7 @@
         can be taken immediately following the flow, but there is little direction for hosts about how to handle these
         situations.</p>
       <div class="large-image-container">
-        <img class="project-image-large image-border"
-          src="images/projects/cancel-change/change/original.png"
+        <img class="project-image-large image-border" src="images/projects/cancel-change/change/original.png"
           alt="Original change screen">
       </div>
       <hr>
@@ -322,19 +312,16 @@
         </li>
       </ul>
       <div class="large-image-container">
-        <img class="project-image-large image-border"
-          src="images/projects/cancel-change/change/process1.png"
+        <img class="project-image-large image-border" src="images/projects/cancel-change/change/process1.png"
           alt="Mapping out the core functionality for the change flow during a design swarm">
       </div>
       <div class="small-image-container">
         <div>
-          <img class="project-image-small image-border"
-            src="images/projects/cancel-change/change/process2.png"
+          <img class="project-image-small image-border" src="images/projects/cancel-change/change/process2.png"
             alt="Sorting how-might-we statements during a design swarm">
         </div>
         <div>
-          <img class="project-image-small image-border"
-            src="images/projects/cancel-change/change/process3.png"
+          <img class="project-image-small image-border" src="images/projects/cancel-change/change/process3.png"
             alt="Voting on designers' ideas during a design swarm">
         </div>
       </div>
@@ -366,46 +353,40 @@
       <p>The new design adds friction against canceling at the top of the panel. We've also added a new required step of
         submitting additional context for every cancellation reason. </p>
       <div class="large-image-container">
-        <img class="project-image-large"
-          src="images/projects/cancel-change/cancel/new1.png"
+        <img class="project-image-large" src="images/projects/cancel-change/cancel/new1.png"
           alt="The first step of the cancellation process, after a host selects their reason for canceling">
       </div>
       <p>For host cancellations, we want to require 100% refund for guests since it's not their fault for these kinds of
         cancellations.</p>
       <div class="large-image-container">
-        <img class="project-image-large image-border"
-          src="images/projects/cancel-change/cancel/new2.png"
+        <img class="project-image-large image-border" src="images/projects/cancel-change/cancel/new2.png"
           alt="A screen with a disclaimer detailing what will happen when the host confirms the cancellation">
       </div>
       <p>Though we may not be able to prevent all cancellations, we can at least help prevent future cancellations by
         prompting hosts to sync their calendars and avoid double bookings. This coaching is specific to the reason the
         host is canceling on the guest.</p>
       <div class="large-image-container">
-        <img class="project-image-large image-border"
-          src="images/projects/cancel-change/cancel/new3.png"
+        <img class="project-image-large image-border" src="images/projects/cancel-change/cancel/new3.png"
           alt="The cancel success screen with coaching for the host to sync their calendar">
       </div>
       <h4>Changing a reservation</h4>
       <p>The options to change a reservation are now surfaced with the option to cancel. This allows for more
         scalability as change functionality grows.</p>
       <div class="large-image-container">
-        <img class="project-image-large"
-          src="images/projects/cancel-change/change/new1.png"
+        <img class="project-image-large" src="images/projects/cancel-change/change/new1.png"
           alt="The list of options a host will see when choosing to change or cancel a reservation">
       </div>
       <p>The new design gives hosts the option to view their calendar availability when choosing to change a
         reservation's dates. In the past, host have provided feedback concerning how they prefer to view their
         availability via the calendar.</p>
       <div class="large-image-container">
-        <img class="project-image-large image-border"
-          src="images/projects/cancel-change/change/new2.png"
+        <img class="project-image-large image-border" src="images/projects/cancel-change/change/new2.png"
           alt="A calendar view for hosts when selecting to change dates on a reservation">
       </div>
       <p>We have also included the ability to add a payment request or issue a refund within the change flow. The option
         presented will be based on a host's settings, but hosts are still able to override the selection.</p>
       <div class="large-image-container">
-        <img class="project-image-large image-border"
-          src="images/projects/cancel-change/change/new3.png"
+        <img class="project-image-large image-border" src="images/projects/cancel-change/change/new3.png"
           alt="A screen where hosts can request extra payment for a longer stay">
       </div>
 
@@ -446,13 +427,15 @@
   <div id="declineFlowOpened" class="hide">
     <div class="lightbox_content">
       <p class="material-icons close">close</p>
+      <div class="project-lightbox-content">
       <h2>Decline coaching</h2>
       <h3>Overview</h3>
       <p>Hosts can approve or decline a traveler's request to book their property. The decline flow allows hosts to
         explain why they can't host a guest.</p>
       <hr>
       <h3>Problem</h3>
-      <p>Host declines lead to disappointed travelers and a loss of revenue. Vrbo loses out on roughly 2M annually due
+      <p>Host declines lead to disappointed travelers and a loss of revenue. Vrbo loses out on millions of dollars
+        annually due
         to host declines. If hosts had an easier way to keep their settings and calendars up-to-date, a bulk
         of these declines could be prevented.</p>
       <hr>
@@ -462,15 +445,13 @@
         approve.
       </p>
       <div class="large-image-container">
-        <img class="project-image-large"
-          src="images/projects/decline-flow/old1.png"
+        <img class="project-image-large" src="images/projects/decline-flow/old1.png"
           alt="The original decline reason information screen">
       </div>
       <p>On the next step, hosts are bombarded with a confusing list of reasons. Once they select a reason, they are
         able to decline without any guidance on how to avoid missing out on future opportunities.</p>
       <div class="large-image-container">
-        <img class="project-image-large image-border"
-          src="images/projects/decline-flow/old2.png"
+        <img class="project-image-large image-border" src="images/projects/decline-flow/old2.png"
           alt="A dropdown list of the original reasons a host could choose for declining a booking request">
       </div>
       <hr>
@@ -507,16 +488,14 @@
         design team to ensure a variety of feedback.
       </p>
       <div class="large-image-container">
-        <img class="project-image-large border-radius"
-          src="images/projects/thumbnails/decline-thumbnail.jpg"
+        <img class="project-image-large border-radius" src="images/projects/thumbnails/decline-thumbnail.jpg"
           alt="Mapping the old decline reasons to the new decline reasons">
       </div>
       <div class="note center">
         <p>Above is a mapping of the old decline reasons to the newly proposed reasons</p>
       </div>
       <div class="large-image-container">
-        <img class="project-image-large"
-          src="images/projects/decline-flow/process2.png"
+        <img class="project-image-large" src="images/projects/decline-flow/process2.png"
           alt="Different explorations of calendar block prompt mid decline flow">
       </div>
       <div class="note center">
@@ -529,8 +508,7 @@
         opted to add a step mid-flow to block a host's availability. Lastly, depending on the decline reason, we
         implemented coaching either mid-flow or post-flow to help hosts save requests or prevent future declines.</p>
       <div class="large-image-container">
-        <img class="project-image-large"
-          src="images/projects/decline-flow/new1.png"
+        <img class="project-image-large" src="images/projects/decline-flow/new1.png"
           alt="New mobile designs for the decline flow">
       </div>
       <hr>
@@ -559,7 +537,8 @@
       <h3>Next steps</h3>
       <p>
         Since implementing new decline reasons, we've learned that many hosts are now selecting "Dates booked on another
-        platform" (22%) when declining a booking request. This tells us that many cross-listed hosts are still not
+        platform" (22%) when declining a booking request. This tells us that many hosts that list their properties on
+        multiple websites are still not
         syncing their calendars between platforms.
       </p>
       <p>
@@ -568,8 +547,7 @@
         permissions.
       </p>
       <div class="large-image-container">
-        <img class="project-image-large"
-          src="images/projects/decline-flow/next-steps.png"
+        <img class="project-image-large" src="images/projects/decline-flow/next-steps.png"
           alt="An update to the block calendar feature that allows for user control">
       </div>
       <div class="button-container">
@@ -590,6 +568,7 @@
   <div id="inboxOpened" class="hide">
     <div class="lightbox_content">
       <p class="material-icons close">close</p>
+      <div class="project-lightbox-content">
       <h2>Inbox redesign</h2>
       <h3>Overview</h3>
       <p>Hosts spend the majority of their time managing reservations and messaging guests via their inbox. The inbox
@@ -647,8 +626,7 @@
         the lead UX designer on the inbox redesign. I regularly met with the Product Manager, Engineers, and the Content
         Strategist to convey progress and troubleshoot issues with working designs. </p>
       <div class="large-image-container">
-        <img class="project-image-large"
-          src="images/projects/inbox/process1.png"
+        <img class="project-image-large" src="images/projects/inbox/process1.png"
           alt="Early explorations of the mobile inbox design">
       </div>
       <div class="note center">
@@ -666,13 +644,11 @@
       </ul>
       <div class="small-image-container">
         <div>
-          <img class="project-image-xsmall inbox-gif-styles"
-            src="images/projects/inbox/prototype1.gif"
+          <img class="project-image-xsmall inbox-gif-styles" src="images/projects/inbox/prototype1.gif"
             alt="Adding coaching to prompt host to send a payment request reminder">
         </div>
         <div>
-          <img class="project-image-xsmall inbox-gif-styles"
-            src="images/projects/inbox/prototype2.gif"
+          <img class="project-image-xsmall inbox-gif-styles" src="images/projects/inbox/prototype2.gif"
             alt="Swiping functionality used to mark a messase as unread ">
         </div>
       </div>
@@ -700,8 +676,7 @@
         booking status, inline coaching maybe present to help hosts act more quickly when they need to. We've also added
         the estimated payout to inquiries and booking requests to help incentivize action.</p>
       <div class="large-image-container">
-        <img class="project-image-large" src="images/projects/inbox/new1.png"
-          alt="The inbox design for desktop web">
+        <img class="project-image-large" src="images/projects/inbox/new1.png" alt="The inbox design for desktop web">
       </div>
       <h4>A mobile-first experience</h4>
       <p>We started designing the new mobile experience and worked up to desktop&mdash;leveraging native iOS components
