update content for AA

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
         <li>UX hueristic evaluation*
           <ul>
             <li>Participants found the reasons for declining a reservation to be confusing</li>
-            <li>The color contrast for the decline reason groups didn't meet AA accessibility criteria</li>
+            <li>The color contrast for the decline reason groups didn't meet AA compliance for accessibility</li>
           </ul>
         </li>
       </ul>
